--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Database
-DATABASE_URL="postgresql://user:password@localhost:5432/zerorot?schema=public"
+# Local dev (SQLite, relative to the repo root)
+# DATABASE_URL="file:./dev.db"
+#
+# Production (Railway): mount a Volume at /data and use:
+# DATABASE_URL="file:/data/dev.db"
+DATABASE_URL="file:./dev.db"
 
 # JWT Secret
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
@@ -18,8 +23,13 @@ INSTAGRAM_CLIENT_ID="your-instagram-client-id"
 INSTAGRAM_CLIENT_SECRET="your-instagram-client-secret"
 
 # Server
-PORT=3001
+PORT=4000
 NODE_ENV=development
 
 # Frontend URL
 FRONTEND_URL="http://localhost:3000"
+
+# Public backend URL (used for rating links inside emails)
+# In production, set this to your Railway service URL, e.g.:
+# BACKEND_PUBLIC_URL="https://your-service.up.railway.app"
+BACKEND_PUBLIC_URL="http://localhost:4000"
