--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "nodemailer": "^6.9.7",
     "node-cron": "^3.0.3",
     "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^21.6.1"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
