redid content discovery using apify and semantic search

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,24 @@ EMAIL_PASS="your-app-specific-password"
 INSTAGRAM_CLIENT_ID="your-instagram-client-id"
 INSTAGRAM_CLIENT_SECRET="your-instagram-client-secret"
 
+# Managed scraping (recommended for production)
+# Choose a provider: "gallery-dl" (default) or "apify"
+INSTAGRAM_SCRAPE_PROVIDER="gallery-dl"
+# Apify token from https://console.apify.com/settings/integrations
+APIFY_API_TOKEN=""
+# Optional: override actor id (default: apify~instagram-scraper)
+APIFY_INSTAGRAM_ACTOR_ID="apify~instagram-scraper"
+# Optional: tune limits / timeouts
+APIFY_RESULTS_LIMIT=30
+APIFY_TIMEOUT_MS=120000
+
+# Discovery Engine
+# Set to "v2" to enable managed scraping + multimodal scoring + embedding similarity.
+DISCOVERY_ENGINE="v1"
+# Cost controls
+AI_VISION_CANDIDATES=12
+AI_EMBED_CANDIDATES=30
+
 # Server
 PORT=4000
 NODE_ENV=development
