--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "start": "node server/index.js",
     "setup": "npm install && cd client && npm install"
   },
-  "keywords": ["instagram", "newsletter", "ai", "content-discovery"],
+  "keywords": [
+    "instagram",
+    "newsletter",
+    "ai",
+    "content-discovery"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^6.19.2",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.7.1",
-    "@prisma/client": "^5.7.1",
-    "openai": "^4.20.1",
-    "nodemailer": "^6.9.7",
     "node-cron": "^3.0.3",
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12"
+    "nodemailer": "^6.9.7",
+    "openai": "^4.20.1",
+    "prisma": "^6.19.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2"
   }
 }
