Fix auth/logout handling, DB init, and docs

--- a/.env.example
+++ b/.env.example
@@ -34,11 +34,61 @@ APIFY_RESULTS_LIMIT=30
 APIFY_TIMEOUT_MS=120000
 
 # Discovery Engine
-# Set to "v2" to enable managed scraping + multimodal scoring + embedding similarity.
-DISCOVERY_ENGINE="v1"
-# Cost controls
+# Set to "v2" to enable the ZeroRot "Beauty Pipeline" (aesthetic + CLIP taste + final vision curation).
+DISCOVERY_ENGINE="v2"
+
+# Beauty pipeline (core of discovery/selection)
+BEAUTY_PIPELINE=true
+# Stage 1: Universal Beauty (LAION aesthetic predictor) — filter out low-quality noise
+BEAUTY_AESTHETIC_MIN=7.0
+BEAUTY_REQUIRE_AESTHETIC=true
+BEAUTY_BULK_CANDIDATES=220
+
+# CLIP image embeddings (Transformers.js)
+# First run will download model weights (large). Optionally set a persistent cache dir:
+# TRANSFORMERS_CACHE="/absolute/path/to/transformers-cache"
+BEAUTY_CLIP_MODEL="Xenova/clip-vit-base-patch32"
+BEAUTY_CLIP_CONCURRENCY=2
+BEAUTY_CLIP_QUANTIZED=false
+BEAUTY_EMBED_CACHE_MAX=750
+BEAUTY_EMBED_CACHE_TTL_MS=86400000
+
+# Optional: Technical quality guardrail (NIMA-like proxy)
+BEAUTY_TECHNICAL_ENABLED=false
+BEAUTY_TECHNICAL_MIN=4.5
+BEAUTY_TECHNICAL_SIZE=128
+
+# Stage 2: Personal Beauty (semantic taste via CLIP)
+# "seed_accounts" uses Apify to fetch top posts from liked accounts (best when APIFY_API_TOKEN is set)
+# "liked_items" uses previously thumbs-up liked items (no Apify needed, but requires prior feedback)
+BEAUTY_TASTE_SOURCE="seed_accounts"
+BEAUTY_TASTE_SEED_POSTS=20
+BEAUTY_TASTE_RESULTS_PER_ACCOUNT=25
+BEAUTY_TASTE_CACHE_TTL_MS=86400000
+
+# Stage 3: Vibe Check (Vision LLM) — tournament ranking among the top slice
+BEAUTY_FINAL_CURATION_K=20
+BEAUTY_VIBE_GROUP_SIZE=5
+BEAUTY_VIBE_KEEP_PER_GROUP=2
+BEAUTY_VIBE_DISABLED=false
+
+# Legacy v2 cost controls (used only when BEAUTY_PIPELINE=false)
 AI_VISION_CANDIDATES=12
 AI_EMBED_CANDIDATES=30
+
+# Seed-and-Expand discovery (optional; works best with Apify enabled)
+# This expands user-provided liked accounts into a "taste cluster" using public profile suggestions,
+# then harvests each account's strongest recent posts using engagement-delta.
+DISCOVERY_SEED_EXPAND=false
+DISCOVERY_SEED_MAX_SEEDS=3
+DISCOVERY_SEED_MAX_EXPANDED=50
+DISCOVERY_SEED_MAX_ACCOUNTS_TOTAL=60
+DISCOVERY_SEED_POSTS_PER_ACCOUNT=50
+DISCOVERY_SEED_KEEP_PER_ACCOUNT=5
+# Set to 0 to consider all available posts (recommended if you want "top posts" across the account’s history).
+DISCOVERY_SEED_DAYS_BACK=0
+DISCOVERY_SEED_DELTA_THRESHOLD=2
+DISCOVERY_SEED_BATCH_SIZE=8
 
 # Server
 PORT=4000
