--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "nodemon server/index.js",
+    "db:push": "npx prisma db push",
+    "dev:server": "npm run db:push && nodemon server/index.js",
     "dev:client": "cd client && npm run dev",
     "build": "cd client && npm run build",
     "start": "node server/index.js",
@@ -21,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
